--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 authors = ["Denys Vitali <denys.vitali@coelis.ch>"]
 
 [dependencies]
-rocket = "0.3.0"
-rocket_codegen = "0.3.0"
+rocket = "0.3.6"
+rocket_codegen = "0.3.6"
+rocket_contrib = "0.3.6"
 ssdp = "0.6.0"
 log = "0.3"
+sonos = "0.1.2"
