--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ rocket_codegen = "0.3.6"
 rocket_contrib = "0.3.6"
 ssdp = "0.6.0"
 log = "0.3"
-sonos = "0.1.2"
+sonos = { path = "./sonos_lib" }
+serde_json = "1.0.9"
