--- a/static/package.json
+++ b/static/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "babel-core": "^6.26.3",
     "babelify": "^8.0.0",
     "browserify": "^16.1.1",
     "del": "^3.0.0",
@@ -7,6 +8,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.5.0",
     "gulp-less-changed": "^1.3.4",
+    "gulp-minify": "^2.1.0",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.4",
