Load /getaa images from SONOS speaker

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ rocket_codegen = "0.3.6"
 rocket_contrib = "0.3.6"
 ssdp = "0.6.0"
 log = "0.3"
+regex = "0.2"
 sonos = { path = "./sonos_lib" }
 serde = "1.0"
 serde_derive = "1.0"
