--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,12 @@
 [package]
 name = "sonos-web"
 version = "0.1.0"
-authors = ["Denys Vitali <denys.vitali@coelis.ch>"]
+authors = ["Denys Vitali <denys@denv.it>"]
+edition = "2018"
 
 [dependencies]
-rocket = "0.3.6"
-rocket_codegen = "0.3.6"
-rocket_contrib = "0.3.6"
-ssdp = "0.6.0"
-log = "0.3"
-regex = "0.2"
-sonos = { path = "./sonos_lib" }
-serde = "1.0"
-serde_derive = "1.0"
-serde_json = "1.0"
-ws = "*"
+actix-web = {repository="actix/actix-web"}
+actix-rt = "1.0.0-alpha.1"
+sonos = "0.1.3"
+regex = "1.3.1"
+serde = { version = "1.0", features = ["derive"] }
